--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@ body {
     font-family: sans-serif;
     background-size: cover;
     background-attachment: fixed; 
-    background-image: url("img/3.png");
+    background-image: url("3.png");
 }
 
 header {
