--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@ body {
     font-family: sans-serif;
     background-size: cover;
     background-attachment: fixed; 
-    background-image: url("3.png");
+    background-image: url("https://github.com/dasha1307/github3.io/blob/main/3.png?raw=true");
 }
 
 header {
